add_subdirectory(include)

#file(GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

#add_library(Core.Materials STATIC ${SOURCE_FILES})
#set_target_properties(Core.Materials PROPERTIES VERSION ${OGRE_SOVERSION} SOVERSION ${OGRE_SOVERSION})
#target_link_libraries(Core.Materials PUBLIC Core.Materials.include)

#ogre_config_lib(Core.Materials TRUE)
